# GSCXScanner

./: .bazelrc  .gitignore  BUILD.bazel  GSCXScanner.podspec  MODULE.bazel  Makefile
GSCXScanner.xcodeproj/: project.pbxproj
Sources/: GSCXAdjustableAccessibilityElement.m  GSCXAppActivityMonitor.m  GSCXAutoInstaller.m  GSCXContinuousScanner.m  GSCXContinuousScannerGalleryViewController.m  GSCXContinuousScannerGridViewController.m  GSCXContinuousScannerListTabBarViewController.m  GSCXContinuousScannerListViewController.m  GSCXContinuousScannerPeriodicScheduler.m  GSCXContinuousScannerResultViewController.m  GSCXContinuousScannerScreenshotViewController.h  GSCXContinuousScannerScreenshotViewController.m  GSCXInstallerOptions.h  GSCXInstallerOptions.m  GSCXMasterScheduler.m  GSCXOverlayViewArranger.m  GSCXReport.h  GSCXReport.m  GSCXScanner-umbrella.h  GSCXScanner.h  GSCXScanner.m  GSCXScannerDelegate.h  GSCXScannerIssueExpandableTableViewDelegate.h  GSCXScannerIssueExpandableTableViewDelegate.m  GSCXScannerIssueExpandableTableViewHeader.m  GSCXScannerIssueTableViewRow.m  GSCXScannerOverlayViewController.m  GSCXScannerOverlayViewController.xib  GSCXScannerResultCarousel.m  GSCXScannerResultCarouselView.m  GSCXScannerScreenshotViewController.m  GSCXScannerSettingsBlockItem.m  GSCXScannerSettingsHostingController.swift  GSCXScannerSettingsView.swift  GSCXScannerSettingsViewDelegate.swift  GSCXSettingsItemModel.swift  GSCXSettingsItemView.swift  GSCXSwizzledMethodNotifier.m  GSCXTouchActivitySource.m  GSCXUtils.m  (+3 more)
release/GSCXScanner.framework/: GSCXContinuousScannerScreenshotViewController.nib  GSCXScannerOverlayViewController.nib
release/GSCXScanner.framework/Headers/: GSCXContinuousScanner.h  GSCXContinuousScannerGalleryViewController.h  GSCXRingViewArranger.h  GSCXScannerResultCarousel.h
xcodeproj/: BUILD.bazel  README.md
