load("@rules_xcodeproj//xcodeproj:defs.bzl", "top_level_target", "xcodeproj")

xcodeproj(
    name = "GSCXScanner",
    project_name = "GSCXScanner",
    tags = ["manual"],
    top_level_targets = [
        top_level_target(
            "//:GSCXScanner_framework",
            target_environments = ["device", "simulator"],
        ),
    ],
    # Configure Xcode schemes
    scheme_autogeneration_mode = "auto",

    # Minimum Xcode version
    minimum_xcode_version = "15.0",
)
